--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py35,py34,py33,py27,py26,pypy}-{release,devel}
+envlist = {py35,py34,py33,py27,pypy}-{release,devel}
 
 [testenv]
 usedevelop = true
