Don't support pypy

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py35,py34,py33,py27,pypy}-{release,devel}
+envlist = pypy35,pypy35-devel,py34,py33,py27,py27-devel
 
 [testenv]
 usedevelop = true
